<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:locservice="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/layoutTop"
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_register"
        android:paddingTop="@dimen/top_padding_for_status_bar"
        android:visibility="visible">

        <RelativeLayout
            android:id="@+id/layoutToolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/order_top_padding"
            android:layout_marginRight="@dimen/order_top_padding"
            android:layout_marginTop="6dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageViewTopMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="10dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_menu_white" />

            <RatingBar
                android:id="@+id/ratingBarFeedback"
                style="?android:attr/ratingBarStyleIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="3dp"
                android:isIndicator="true"
                android:numStars="5"
                android:progressDrawable="@drawable/rating_bar_small_state"
                android:stepSize="1.0"
                android:visibility="invisible" />

            <com.locservice.ui.controls.CustomTextView
                android:id="@+id/textViewScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="13dp"
                android:text="@string/str_score"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:visibility="gone"
                locservice:font="fonts/RobotoRegular.ttf" />

            <FrameLayout
                android:id="@+id/layoutClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="3dp"
                android:paddingBottom="10dp"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:visibility="invisible">

                <ImageView
                    android:id="@+id/imageViewClose"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_close" />

            </FrameLayout>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/layoutFeedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layoutToolBar"
            android:layout_marginLeft="@dimen/order_top_padding"
            android:layout_marginRight="@dimen/order_top_padding"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:visibility="gone">

            <com.locservice.ui.controls.CustomTextView
                android:id="@+id/textViewSetFeedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_set_feedback"
                android:textColor="#70ffffff"
                android:textSize="14sp"
                locservice:font="fonts/RobotoMedium.ttf" />

            <com.locservice.ui.controls.CustomEditTextView
                android:id="@+id/editTextViewFeedbackContent"
                maxLength="140"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#00000000"
                android:maxLines="5"
                android:textColor="#ffffff"
                android:textSize="18sp"
                locservice:font="fonts/RobotoRegular.ttf" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <com.locservice.ui.controls.CustomTextView
                android:id="@+id/textViewSendFeedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="24dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/bg_send_feedback_button_white"
                android:gravity="center"
                android:paddingBottom="16dp"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:paddingTop="16dp"
                android:text="@string/str_send_feedback"
                android:textColor="@color/black"
                android:textSize="18sp"
                locservice:font="fonts/RobotoMedium.ttf" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/layoutToolBar"
            android:layout_above="@+id/textViewOk"
            android:overScrollMode="never">


        <RelativeLayout
            android:id="@+id/layoutRateContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <!--android:layout_below="@id/layoutToolBar"-->


            <com.locservice.ui.controls.AutoResizeTextView
                android:id="@+id/textViewArrived"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="top"
                android:text="@string/str_arrived"
                android:textColor="#ffffff"
                android:textSize="39sp"
                android:singleLine="true"
                locservice:font="fonts/RobotoLight.ttf" />

            <com.locservice.ui.controls.CustomTextView
                android:id="@+id/textViewArrivedInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewArrived"
                android:layout_centerHorizontal="true"
                android:text="@string/str_no_info_about_trip"
                android:textColor="#ffffff"
                android:textSize="18sp"
                locservice:font="fonts/RobotoRegular.ttf" />

            <LinearLayout
                android:id="@+id/layoutCounter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewArrivedInfo"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <com.locservice.ui.controls.CustomTextView
                    android:id="@+id/textViewArrivedCounter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_counter"
                    android:textColor="#ffffff"
                    android:textSize="56sp"
                    locservice:font="fonts/RobotoLight.ttf" />

                <com.locservice.ui.controls.CustomTextView
                    android:id="@+id/textViewArrivedCounterRuble"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:text="@string/str_ruble"
                    android:textColor="#ffffff"
                    android:textSize="56sp"
                    locservice:font="fonts/RobotoLight.ttf" />

                <ImageView
                    android:id="@+id/imageViewArrow"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/ic_arrow_down"
                    android:contentDescription="@null" />


            </LinearLayout>

            <com.locservice.ui.controls.CustomTextView
                android:id="@+id/textViewArrivedThanks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/layoutCounter"
                android:layout_centerHorizontal="true"
                android:text="@string/str_paid"
                android:textColor="#ffffff"
                android:textSize="18sp"
                locservice:font="fonts/RobotoRegular.ttf" />

            <include
                android:id="@+id/layoutTripContent"
                layout="@layout/trip_content_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/textViewArrivedThanks"
                android:layout_marginTop="16dp"
                android:visibility="gone" />

            <RelativeLayout
                android:id="@+id/layoutRatePart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/textViewArrivedThanks"
                android:layout_marginTop="16dp">

                <RatingBar
                    android:id="@+id/ratingBarArrived"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="5dp"
                    android:isIndicator="false"
                    android:progressDrawable="@drawable/rating_bar_state"
                    android:stepSize="1.0" />

                <com.locservice.ui.controls.CustomTextView
                    android:id="@+id/textViewArrivedVote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ratingBarArrived"
                    android:layout_centerHorizontal="true"
                    android:paddingBottom="16dp"
                    android:paddingTop="9dp"
                    android:text="@string/str_arrived_vote"
                    android:textColor="#ffffff"
                    android:textSize="18sp"
                    locservice:font="fonts/RobotoRegular.ttf" />

                <LinearLayout
                    android:id="@+id/layoutArrivedBonusCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textViewArrivedVote"
                    android:layout_centerHorizontal="true"
                    android:orientation="horizontal">

                    <com.locservice.ui.controls.CustomTextView
                        android:id="@+id/textViewArrivedBonusCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_bonus_count"
                        android:textColor="#ffffff"
                        android:textSize="56sp"
                        locservice:font="fonts/RobotoLight.ttf" />

                    <com.locservice.ui.controls.CustomTextView
                        android:id="@+id/textViewArrivedBonusCountRuble"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:text="@string/str_ruble"
                        android:textColor="#ffffff"
                        android:textSize="56sp"
                        locservice:font="fonts/RobotoLight.ttf" />

                </LinearLayout>

                <com.locservice.ui.controls.CustomTextView
                    android:id="@+id/textViewArrivedBonus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/layoutArrivedBonusCount"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="8dp"
                    android:text="@string/str_reward"
                    android:textColor="#ffffff"
                    android:textSize="18sp"
                    locservice:font="fonts/RobotoRegular.ttf" />


                <com.locservice.ui.controls.CustomTextView
                    android:id="@+id/textViewArrivedAnotherBonus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textViewArrivedBonus"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="12dp"
                    android:text="@string/str_another_bonus"
                    android:textColor="#ffffff"
                    android:textSize="18sp"
                    android:visibility="invisible"
                    locservice:font="fonts/RobotoRegular.ttf" />


            </RelativeLayout>


        </RelativeLayout>

        </ScrollView>

        <com.locservice.ui.controls.CustomTextView
            android:id="@+id/textViewOk"
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/drawable_white_selector"
            android:gravity="center"
            android:text="OK"
            android:textColor="#e75a3c"
            android:textSize="39sp"
            locservice:font="fonts/RobotoLight.ttf" />


    </RelativeLayout>


</FrameLayout>